:lipstick: Game page alignment fixes

--- a/src/main/resources/styles/game.css
+++ b/src/main/resources/styles/game.css
@@ -48,3 +48,7 @@
     -fx-spacing: 15px;
 }
 
+.test {
+    -fx-background-color: green;
+}
+
